<resources>
    <string name="app_name">Math Quiz Game</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="tag_qlength">qlengthDialog</string>
    <string name="action_settings">Settings</string>
    <string name="btn_start">Start!</string>
    <string name="btn_instr">Instructions</string>
    <string name="btn_score">Highscore!</string>
    <string name="high_score">Your Highscore is:</string>
    <string name="choose_length">Choose the quiz length</string>
    <string name="cancel">Cancel</string>
    <string name="go">Go!</string> <string name="hello_world">Hello world!</string>
    <string name="main_menu">Main Menu →</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="delete">DELETE</string>
    <string name="_0">0</string>
    <string name="enter">ENTER</string>
    <string name="image">image</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="_10_10">10 / 10</string>
    <string name="timerimage">timerImage</string>
    <string name="highscore">Highscore!</string>
    <string name="highscoretime">highscoreTime</string>
    <string name="back">Back</string>
    <string name="btn_share">Share</string>
    <string name="btn_close">Close</string>
    <string name="high_score_text">High Score:</string>
    <string name="btnMenu">Menu</string>
    <string name="highscoreTime">TEST</string>
    <string name="save_score">Save Score</string>
    <string name="toggle_music_off">Toggle Music Off</string>
    <string name="music_settings">Music Settings</string>
    <string name="view">view</string>
    <string-array name="lengths">
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>

</resources>
