<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow android:layout_weight="1">

        <Button
            android:id="@+id/button7"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/_7"
            android:textColor="@color/green"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button8"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/_8"
            android:textColor="@color/green"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button9"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/_9"
            android:textColor="@color/green"
            android:textSize="24sp" />
    </TableRow>

    <TableRow android:layout_weight="1">

        <Button
            android:id="@+id/button4"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/_4"
            android:textColor="@color/green"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button5"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/_5"
            android:textColor="@color/green"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button6"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/_6"
            android:textColor="@color/green"
            android:textSize="24sp" />
    </TableRow>

    <TableRow android:layout_weight="1">

        <Button
            android:id="@+id/button1"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/_1"
            android:textColor="@color/green"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button2"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/_2"
            android:textColor="@color/green"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button3"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/_3"
            android:textColor="@color/green"
            android:textSize="24sp" />
    </TableRow>

    <TableRow android:layout_weight="1">

        <Button
            android:id="@+id/buttonDel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/light_green"
            android:text="@string/delete"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/_0"
            android:textColor="@color/green"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonEnt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/light_green"
            android:text="@string/enter"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </TableRow>
</TableLayout>