<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    android:orientation="vertical">


    <TextView
        android:id="@+id/musicSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/music_settings"
        android:textColor="@color/black"
        android:textSize="60sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_weight="1" />

    <CheckBox
        android:id="@+id/gameMusicCheck"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:defaultValue="false"
        android:gravity="center"
        android:text="@string/toggle_music_off"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btn_menu1"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/green"
        android:text="@string/btnMenu"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_weight="1" />


</LinearLayout>