<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80sp" />

    <TextView
        android:id="@+id/highscoreLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/highscore"
        android:textColor="@color/black"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/highscoreTime"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/highscoreTime"
        android:textColor="@color/black"
        android:textSize="50sp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:background="@color/green"
            android:onClick="authorise"
            android:text="@string/btn_share"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:background="@color/green"

            android:text="@string/btnMenu"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </TableRow>


    <TextView

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.64" />

    <TextView
        android:id="@+id/text_view"
        android:layout_width="0dp"
        android:layout_height="0dp" />


</LinearLayout>