<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="au.com.hillnet.mathquizgame.QuizActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnTopExit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:background="@color/white"
            android:contentDescription="@string/back_arrow"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5" />

        <TextView
            android:id="@+id/txtProgress"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/_10_10"
            android:textColor="@color/green"
            android:textSize="24sp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/timerimage"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_access_time_black_24dp" />

        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="@color/green"
            android:textSize="24sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/green" />

    <ListView
        android:id="@+id/lstView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:divider="@color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/green" />

    <FrameLayout
        android:id="@+id/numpadContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

</LinearLayout>
